# io_uring-encoded

./: CMakeLists.txt  README.md  bookend-lzo  stream  zlib  zstd
.github/workflows/: build.yml
dumps/: bookend-zlib  bookend-zstd  inline-lzo  inline-zlib  inline-zstd  lzo  normal
src/: dumps.S  dumps2.S  read-test.cpp  test.cpp  write-test.cpp
